# BuildFlow

./: .env.example  .gitignore  README.md  buildflow.db-shm  buildflow.db-wal  pyproject.toml
backend/: config.py  database.py  main.py
backend/ddc_skills/: __init__.py  budget_variance.py  cash_flow.py  change_order.py  cost_calculator.py  critical_path.py  daily_report.py  kpi_dashboard.py  permit_tracker.py  punch_list.py  schedule_delay.py  subcontractor_payment.py  weather_impact.py
backend/models/: __init__.py  activity_log.py  budget.py  daily_log.py  document.py  permit.py  project.py  punchlist.py  schedule.py  subcontractor.py
backend/routers/: budget.py  chat.py  daily_logs.py  dashboard.py  documents.py  education.py  permits.py  projects.py  punchlist.py  schedule.py  subcontractors.py  uploads.py
backend/schemas/: analytics.py  budget.py  chat.py  daily_log.py  dashboard.py  document.py  education.py  notifications.py  permit.py  project.py  punchlist.py  schedule.py  subcontractor.py
backend/services/: analytics.py  chat_service.py  costs.py  knowledge_base.py  notifications.py
backend/utils/: file_storage.py
frontend/: index.html  package-lock.json  package.json  tsconfig.tsbuildinfo
frontend/public/: manifest.json
frontend/src/: App.tsx  main.tsx
frontend/src/api/: chat.ts
frontend/src/components/budget/: BidLeveling.tsx  BudgetPage.tsx
frontend/src/components/chat/: ChatWidget.tsx
frontend/src/contexts/: EducationContext.tsx
frontend/src/types/: index.ts
frontend/src/utils/: constants.ts
scripts/: init_db.py  seed_data.py
(+14 files in other folders)
